[package]
name = "halt"
version = "2.0.2"
authors = ["evenorog <evenorog@gmail.com>"]
description = "Provides functionality for pausing, stopping, and resuming iterators, readers, and writers."
documentation = "https://docs.rs/halt"
repository = "https://github.com/evenorog/halt"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["pause", "resume", "stop"]
categories = ["concurrency"]
exclude = ["/.travis.yml"]
edition = "2024"

[badges]
maintenance = { status = "actively-developed" }
