[package]
name = "halt"
version = "3.0.0"
authors = ["evenorog <evenorog@gmail.com>"]
description = "Provides worker threads that can be paused, stopped, and resumed."
documentation = "https://docs.rs/halt"
repository = "https://github.com/evenorog/halt"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["worker"]
categories = ["concurrency"]
edition = "2024"

[badges]
maintenance = { status = "actively-developed" }
